# Gravitas-Core

./: .antigravity_brain.db  .gitignore  LICENSE  README.md  TODO_MCP_FIX.md  pyproject.toml  test_browser.py  udo resolvectl dns wlp2s0 8.8.8.8 8.8.4.4
.github/workflows/: ci.yml
antigravity_mcp/: browser.py  controller.py  mcp_webapp.py  memory.py  project_intel.py  server.py
gravitas_mcp/: __init__.py  browser.py  mcp_webapp.py  memory.py  project_intel.py  server.py  terminal.py
